@@ -4,6 +4,10 @@ History of Products.minaraad
 2.0.10 (unreleased)
 -------------------
 
+- Allowed use of @@test_mail?memberid=maurits to test the sending of
+  the membership reminder.
+  [maurits]
+
 
 2.0.9 (released 29 May 2008)
 ----------------------------
